--- a/projetos/TicTacToe/index.html
+++ b/projetos/TicTacToe/index.html
@@ -6,19 +6,24 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body">
     <h1>Tic Tac Toe Game</h1>
+    <header>
+        <div id="blue"> </div>You 
+        <div id="red"></div>Machine
+    </header>
     <section class="jogoDaVelha">
-        <div onclick="button1()" id="button1">1</div>
-        <div onclick="button2()" id="button2">2</div>
-        <div onclick="button3()" id="button3">3</div>
-        <div onclick="button4()" id="button4">4</div>
-        <div onclick="button5()" id="button5">5</div>
-        <div onclick="button6()" id="button6">6</div>
-        <div onclick="button7()" id="button7">7</div>
-        <div onclick="button8()" id="button8">8</div>
-        <div onclick="button9()" id="button9">9</div>
+        <div onclick="button('1')" id="button1">1</div>
+        <div onclick="button('2')" id="button2">2</div>
+        <div onclick="button('3')" id="button3">3</div>
+        <div onclick="button('4')" id="button4">4</div>
+        <div onclick="button('5')" id="button5">5</div>
+        <div onclick="button('6')" id="button6">6</div>
+        <div onclick="button('7')" id="button7">7</div>
+        <div onclick="button('8')" id="button8">8</div>
+        <div onclick="button('9')" id="button9">9</div>
     </section>
+    <p><button type="submit" onclick="clean()">Clean</button></p>
     <script src="main.js"></script>
 </body>
 </html>
