--- a/projetos/TicTacToe/index.html
+++ b/projetos/TicTacToe/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body">
@@ -13,17 +14,26 @@
         <div id="red"></div>Machine
     </header>
     <section class="jogoDaVelha">
-        <div onclick="button('1')" id="button1">1</div>
-        <div onclick="button('2')" id="button2">2</div>
-        <div onclick="button('3')" id="button3">3</div>
-        <div onclick="button('4')" id="button4">4</div>
-        <div onclick="button('5')" id="button5">5</div>
-        <div onclick="button('6')" id="button6">6</div>
-        <div onclick="button('7')" id="button7">7</div>
-        <div onclick="button('8')" id="button8">8</div>
-        <div onclick="button('9')" id="button9">9</div>
+        <div onclick="button('1')" id="button1"></div>
+        <div onclick="button('2')" id="button2"></div>
+        <div onclick="button('3')" id="button3"></div>
+        <div onclick="button('4')" id="button4"></div>
+        <div onclick="button('5')" id="button5"></div>
+        <div onclick="button('6')" id="button6"></div>
+        <div onclick="button('7')" id="button7"></div>
+        <div onclick="button('8')" id="button8"></div>
+        <div onclick="button('9')" id="button9"></div>
     </section>
     <p><button type="submit" onclick="clean()">Clean</button></p>
+    <footer class="container">
+        <span class="blur"></span>
+        <span class="blur"></span>
+        <div class="socials">
+            <a href="https://github.com/guilhermerezende10" target="_blank" rel="external"><i class="ri-github-line"></i></a>
+            <a href="https://www.instagram.com/guilhermerezende.10/" target="_blank" rel="external"><i class="ri-instagram-line"></i></a>
+            <a href="https://www.linkedin.com/in/guilherme-rezende-518297235/" target="_blank" rel="external"><i class="ri-linkedin-line"></i></a>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
