--- a/projetos/TicTacToe/index.html
+++ b/projetos/TicTacToe/index.html
@@ -10,8 +10,8 @@
 <body">
     <h1>Tic Tac Toe Game</h1>
     <header>
-        <div id="blue"> </div>You 
-        <div id="red"></div>Machine
+        <div id="blue"></div>You: <pre id="outCountYou"> 0 </pre>
+        <div id="red"></div>Machine: <pre id="outCountMachine"> 0 </pre>
     </header>
     <section class="jogoDaVelha">
         <div onclick="button('1')" id="button1"></div>
