--- a/exercícios/curso-Jonas-Schmedtmann/challenges/A closer look at functions/challenge001.html
+++ b/exercícios/curso-Jonas-Schmedtmann/challenges/A closer look at functions/challenge001.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button type="submit" id="poll">Answer Poll</button>
     <script src="challenge001.js"></script>
 </body>
 </html>
