--- a/exercícios/curso-Jonas-Schmedtmann/projects/Arrays-Bankist/index.html
+++ b/exercícios/curso-Jonas-Schmedtmann/projects/Arrays-Bankist/index.html
@@ -106,6 +106,7 @@
             type="password"
             maxlength="6"
             class="form__input form__input--pin"
+            autocomplete="on"
           />
           <button class="form__btn form__btn--close">&rarr;</button>
           <label class="form__label">Confirm user</label>
