Revealing elements on scroll

--- a/exercícios/curso-Jonas-Schmedtmann/projects/Bankist-Website/index.html
+++ b/exercícios/curso-Jonas-Schmedtmann/projects/Bankist-Website/index.html
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class="section id="section--2">
+    <section class="section" id="section--2">
       <div class="section__title">
         <h2 class="section__description">Operations</h2>
         <h3 class="section__header">
