--- a/exercícios/curso-Jonas-Schmedtmann/projects/Bankist-Website/index.html
+++ b/exercícios/curso-Jonas-Schmedtmann/projects/Bankist-Website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/png" href="img/icon.png" />
-
+    <script defer src="script.js"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
@@ -352,6 +352,5 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <script src="script.js"></script>
   </body>
 </html>
