--- a/exercícios/curso-Jonas-Schmedtmann/challenges/Asynchronous JavaScript/index.html
+++ b/exercícios/curso-Jonas-Schmedtmann/challenges/Asynchronous JavaScript/index.html
@@ -25,7 +25,7 @@
         -->
       </div>
       <!-- <button class="btn-country">Where am I?</button> -->
-      <!-- <div class="images"></div> -->
+      <div class="images"></div>
     </main>
   </body>
 </html>
