--- a/exercícios/curso-Jonas-Schmedtmann/Forkify App/index.html
+++ b/exercícios/curso-Jonas-Schmedtmann/Forkify App/index.html
@@ -64,7 +64,7 @@
                     </p>
                   </div>
 
-                  <!-- <wli class="preview">
+                  <!-- <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
                         <img src="src/img/test-1.jpg" alt="Test" />
@@ -76,7 +76,7 @@
                         <p class="preview__publisher">The Pioneer Woman</p>
                       </div>
                     </a>
-                  </wli> -->
+                  </li> -->
                 </ul>
               </div>
             </li>
